<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/view_navigation_bar" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/common_color_white"
        android:drawableLeft="@mipmap/user_name"
        android:drawablePadding="10dp"
        android:hint="@string/info_nick"
        android:inputType="none"
        android:padding="15dp"
        android:textColor="@color/common_color_black"
        android:textSize="16sp" />

    <include layout="@layout/view_line_horizontal" />

    <EditText
        android:id="@+id/etRealName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/common_color_white"
        android:drawableLeft="@mipmap/user_name"
        android:drawablePadding="10dp"
        android:hint="@string/info_real"
        android:inputType="none"
        android:padding="15dp"
        android:textColor="@color/common_color_black"
        android:textSize="16sp" />

    <include layout="@layout/view_line_horizontal" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/common_color_white"
        android:drawableLeft="@mipmap/userinfo_phone"
        android:drawablePadding="10dp"
        android:enabled="false"
        android:hint="@string/info_phone"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="@color/common_color_black"
        android:textSize="16sp" />

    <include layout="@layout/view_line_horizontal" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/common_color_white"
        android:drawableLeft="@mipmap/user_name"
        android:drawablePadding="10dp"
        android:hint="@string/info_age"
        android:inputType="none"
        android:padding="15dp"
        android:textColor="@color/common_color_black"
        android:textSize="16sp" />

    <include layout="@layout/view_line_horizontal" />

    <RelativeLayout
        android:id="@+id/rlSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/common_color_white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ivSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:src="@mipmap/user_sex" />

        <TextView
            android:id="@+id/tvSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ivSex"
            android:background="@color/common_color_transparent"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/info_sex"
            android:inputType="none"
            android:paddingBottom="15dp"
            android:paddingLeft="0dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:textColor="@color/common_color_black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvSex"
            android:src="@mipmap/spinner_sex_arrow" />
    </RelativeLayout>

    <include layout="@layout/view_line_horizontal" />

    <EditText
        android:id="@+id/etWork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/common_color_white"
        android:drawableLeft="@mipmap/user_addr"
        android:drawablePadding="10dp"
        android:hint="@string/info_work"
        android:inputType="none"
        android:padding="15dp"
        android:textColor="@color/common_color_black"
        android:textSize="16sp" />

    <include layout="@layout/view_line_horizontal" />

    <EditText
        android:id="@+id/etHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/common_color_white"
        android:drawableLeft="@mipmap/user_addr"
        android:drawablePadding="10dp"
        android:hint="@string/info_home"
        android:inputType="none"
        android:padding="15dp"
        android:textColor="@color/common_color_black"
        android:textSize="16sp" />

    <include layout="@layout/view_line_horizontal" />
</LinearLayout>