<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/common_color_black"
            android:text="@string/choose_sexM" />

        <include layout="@layout/view_line_horizontal" />

        <TextView
            android:id="@+id/tvFemen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/common_color_black"
            android:text="@string/choose_sexF" />

        <include layout="@layout/view_line_horizontal" />

        <TextView
            android:id="@+id/tvSecret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/common_color_black"
            android:text="@string/choose_sexS" />

    </LinearLayout>
</RelativeLayout>