<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40000000"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_color_white"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rlClue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/list_item_selector"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="10dp"
                android:drawableTop="@mipmap/voice_clue"
                android:text="@string/voice_clue"
                android:textColor="@color/common_color_black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlManager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/list_item_selector"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="10dp"
                android:drawableTop="@mipmap/voice_manager"
                android:text="@string/voice_manager"
                android:textColor="@color/common_color_black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlControl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/list_item_selector"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="10dp"
                android:drawableTop="@mipmap/voice_control"
                android:text="@string/voice_control"
                android:textColor="@color/common_color_black"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>